Fix header gap by positioning hero absolutely

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -2,17 +2,20 @@ html {
 	background: #333;
 	margin: 0;
 	padding: 0;
+	height: 100%;
 }
 
 html, body {
 	margin: 0;
 	padding: 0;
+	height: 100%;
 }
 
 body {
 	font-family: 'Rubik', sans-serif;
 	margin: 0;
 	padding: 0;
+	position: relative;
 }
 
 a {
