--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -7,9 +7,12 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	position: relative;
-	margin-top: 0;
-	padding-top: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
 
 	&:before {
 		content: "";
@@ -44,6 +47,11 @@
 		position: absolute;
 		right: 0;
 	}
+}
+
+.content {
+	position: relative;
+	margin-top: 100vh;
 }
 
 .image {
